# wifi-sense-trainer

./: .gitignore  LICENSE  README.md  pyproject.toml
.omc/: project-memory.json
.omc/state/: agent-replay-64b33da5-1d3f-4474-95d2-f023cfda9adc.jsonl  idle-notif-cooldown.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-06-07T16-09-47-024Z.json
tests/: test_basic.py
wifi_sense_trainer/: __init__.py  calibrate.py  coco.py  csi.py  imu.py  infer.py  model.py  teacher.py  train.py
