[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wifi-sense-trainer"
version = "0.1.0"
description = "Train and deploy a real WiFi-CSI human-pose head on top of a RuView CSI aggregator: camera-teacher labeling, PyTorch training (real backprop), and a live self-inference sidecar."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "dtseng123" }]
keywords = ["wifi-sensing", "csi", "pose-estimation", "esp32", "ruview"]
dependencies = [
    "numpy>=1.24",
    "websocket-client>=1.6",
]

[project.optional-dependencies]
# Heavy deps usually inherited from the system (--system-site-packages venv).
torch = ["torch>=2.0"]
teacher = ["opencv-python>=4.8", "ultralytics>=8.0"]
mediapipe = ["mediapipe>=0.10"]  # python<=3.12 only
dev = ["pytest>=7"]

[project.scripts]
wst-collect = "wifi_sense_trainer.teacher:main"
wst-train = "wifi_sense_trainer.train:main"
wst-infer = "wifi_sense_trainer.infer:main"

[tool.setuptools.packages.find]
include = ["wifi_sense_trainer*"]
